chore: fix mobile overflow on home page and image aspect ratios

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -698,7 +698,7 @@ fieldset>legend:first-of-type {
 
 img {
   max-width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 hr {
